Include repo link and fix labels to prevent layout shift when selected

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,14 @@ p {
   place-items: center;
   background-color: var(--backgroundColor);
 }
+.gh-link {
+  position: fixed;
+  top: 1em;
+  right: 1em;
+}
+.gh-link:hover {
+  opacity: 0.8;
+}
 #component-container {
   width: 100%;
   max-width: 600px;
@@ -92,8 +100,10 @@ p {
 }
 .graphs-container {
   position: relative;
-  display: flex;
-  justify-content: space-evenly;
+  /* display: flex;
+  justify-content: space-around; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
   width: 100%;
 }
 
@@ -105,6 +115,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: flex-end; 
+  align-items: center;
 }
 .month-graph-container:hover {
   cursor: pointer;
@@ -157,20 +168,16 @@ p {
 .label-text{ 
   text-align: center;
 }
-.label-text::after {
-  display: block;
-  content: attr(title);
-  font-weight: 600;
-  height: 1px;
-  color: transparent;
-  overflow: hidden;
-  visibility: hidden;
-}
 .highlight-label-text {
+  background-color: black;
   background-image: linear-gradient(135deg, #2cd5ff, #b15eff);
+  background-size: 100%;
+  background-repeat: repeat;
   background-clip: text;
-  color: transparent;
+
+  color: rgba(255,255,255,0);
   font-weight: 600; 
+  z-index: 1500;
 }
 
 /* *********************************** */
